<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_auth">
        <EditTextPreference
            android:key="user"
            android:title="@string/settings_user"
            android:dialogTitle="@string/settings_user_dialog_title"
            android:defaultValue="@string/default_user" />
        <EditTextPreference
            android:key="password"
            android:title="@string/settings_password"
            android:dialogTitle="@string/settings_password_dialog_title"
            android:defaultValue="@string/default_password"
            android:inputType="textPassword" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_server">
        <EditTextPreference
            android:key="host"
            android:title="@string/settings_host"
            android:dialogTitle="@string/settings_host_dialog_title"
            android:defaultValue="@string/default_host"
            android:inputType="textUri" />
        <EditTextPreference
            android:key="port"
            android:title="@string/settings_port"
            android:dialogTitle="@string/settings_port_dialog_title"
            android:defaultValue="@integer/default_port"
            android:inputType="number" />
        <CheckBoxPreference
            android:key="https"
            android:title="@string/settings_https"
            android:defaultValue="@bool/default_https" />
        <EditTextPreference
            android:key="path"
            android:title="@string/settings_path"
            android:dialogTitle="@string/settings_path_dialog_title"
            android:defaultValue="@string/default_path"
            android:inputType="textUri" />
    </PreferenceCategory>

</PreferenceScreen>